refactor : 리스트 변환 함수 변경